# agentic-autoscaler

./: .gitignore  .golangci.yml  CHANGELOG.md  Makefile  PROJECT  README.md  design.md  go.mod  go.work
.github/workflows/: ci.yml  nightly-e2e.yml
api/v1alpha1/: agenticautoscaler_types.go  agenticautoscaler_types_test.go  groupversion_info.go  zz_generated.deepcopy.go
cmd/: main.go
cmd/controller/: main.go
config/certmanager/: certificate.yaml
config/crd/: kustomization.yaml
config/default/: kustomization.yaml  manager_webhook_patch.yaml  metrics_service.yaml
config/manager/: manager.yaml
config/network-policy/: allow-metrics-traffic.yaml  allow-webhook-traffic.yaml
deploy/: README.md
docs/: design.md  design_v2.md  gap-report-v1.md  gap-report-v2.md  migrating-v1-to-v2.md  v2-acceptance-coverage.md  v2-spec-revision-plan.md  v2_revision notes.md
forecast-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
forecast-service/src/forecast/: app.py  dispatch.py  gbdt_model.py  linear_extrap.py  metrics.py  models.py  prophet_model.py  warmup.py
forecast-service/tests/: conftest.py
forecast-service/tests/integration/: test_app.py  test_warmup.py
forecast-service/tests/unit/: test_dispatch.py  test_gbdt_model.py  test_linear_extrap.py  test_metrics.py  test_models.py  test_prophet_model.py
k6/: README.md  dry-run_test.go
target-app/: .dockerignore  Dockerfile  README.md  go.mod
testdata/: SCHEMA.md  default_1440.json  flat_1440.json  flat_70.json  gradual_ramp_1440.json  insufficient_50.json  periodic_1440.json  spiky_1440.json
(+143 files in other folders)
