[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "agentic-forecast"
version = "0.1.0"
description = "Forecast service for the agentic autoscaler"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "prophet>=1.1.5",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/forecast"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=forecast --cov-report=term-missing --cov-fail-under=90"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (Prophet timing-sensitive)",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ANN", "PT"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["prophet.*"]
ignore_missing_imports = true
